--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -52,3 +52,10 @@ management:
   info:
     env:
       enabled: true
+
+# Swagger UI
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /ui.html
