Added Spring Security to application with JWT authorization

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,7 @@ services:
       SPRING_DATASOURCE_USERNAME: user
       SPRING_DATASOURCE_PASSWORD: p@ssw0rd
       EXCHANGE_API_KEY: ${EXCHANGE_RATE_API_KEY}
+      JWT_SECRET: ${JWT_SECRET}
       SPRING_REDIS_HOST: redis
       SPRING_RABBITMQ_HOST: rabbitmq
 
